# dagshund

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  biome.json  justfile  package.json  prek.toml  pyproject.toml  tsconfig.json
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.beads/.br_history/: issues.20260330_170126.jsonl  issues.20260330_171459.jsonl  issues.20260330_183129.jsonl
.claude/: AGENTS.md  CLAUDE.md  PYTHON.md  TESTING.md  TYPESCRIPT.md  VISUALIZATION.md  WORKFLOW.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: release.md  update-fixtures.md
docs/pages/: index.html
fixtures/: README.md  all-hierarchies-plan.json  apps.json  bundle.schema.json  complex-plan.json  databricks.yml  dependency-changes-plan.json  drift-plan.json  initial-create-plan.json  job-only-change-plan.json  list-element-semantic-cases.json  mixed-plan.json  no-changes-plan.json  remove-one-perm-plan.json  remove-perm-plan.json  sample-plan.json  sub-only-change-plan.json  sub-resources-plan.json
fixtures/bases/: databrick-before-mid.yml  databricks-before.yml  databricks.yml
fixtures/golden/: .env.example  externals.yaml  invalid-plan.json
fixtures/golden/all-create/: expected-graph.json  expected.md  expected.txt  plan.json
fixtures/golden/all-destroy/: expected-graph.json  expected.md  expected.txt  plan.json
fixtures/golden/all-hierarchies/: README.md  expected-graph.json  expected.md  expected.txt  plan.json
fixtures/golden/app-dependencies/: expected-graph.json  expected.md  expected.txt  plan.json
fixtures/golden/lateral-deps/: expected-graph.json  expected.md  expected.txt  plan.json
fixtures/golden/manual-drift/: README.md  (+4 more)
fixtures/tooling/: generate_expected.sh  regen.sh  sanitize.py
js/: biome.json  bunfig.toml  package.json  tsconfig.json
js/scripts/: build-template.ts  extract-graph.ts
js/src/: App.tsx  app.tsx  cli.ts  frontend.tsx  html-assembler.ts  index.html  index.ts
js/test-bundle/: .gitignore  databricks-before.yml
js/tests/: html-assembler.test.ts  setup.ts
pages/: index.html
skills/dagshund/: SKILL.md
src/: App.tsx  cli.ts  frontend.tsx  index.html  index.ts
src/components/: detail-panel.tsx  diff-filter-toolbar.tsx  diff-state-styles.ts  flow-canvas.tsx  index.ts  job-node.tsx  resource-group-node.tsx  resource-node.tsx  resources-view.tsx  structural-diff-view.tsx  tab-bar.tsx  task-node.tsx  theme-toggle.tsx
src/dagshund/: __init__.py  __main__.py  browser.py  change_path.py  cli.py  debug.py  filter.py  format.py  markdown.py  merge.py  model.py  plan.py  terminal.py  text.py  types.py
src/graph/: build-plan-graph.ts  build-resource-graph.ts  build-task-change-summary.ts  extract-tasks.ts  index.ts  layout-graph.ts  resolve-task-diff-state.ts
src/hooks/: index.ts  use-hover-context.ts  use-node-dimming.ts  use-plan-graph.ts  use-resize-handle.ts  use-resource-graph.ts  use-stdin-plan.ts  use-theme.ts
src/parser/: index.ts  map-diff-state.ts  parse-plan.ts
src/styles/: index.css
src/types/: dagre-cjs.d.ts  graph-types.ts  index.ts  plan-schema.ts  structural-diff.ts
src/utils/: format-value.ts  index.ts  resource-key.ts  structural-diff.ts  task-key.ts
test-bundle/: databricks.yml  real_fixture.json
tests/: conftest.py  factories.py  test_browser.py  test_change_path.py  test_cli.py  test_debug.py  test_filter.py  test_format.py  test_init.py  test_markdown.py  test_merge.py  test_model.py  test_plan.py  test_sanitize.py  test_terminal.py  test_text.py
tests/components/: diff-state-styles.test.ts
tests/fixtures/: complex-plan.json  generate-large-fixture.ts  sample-plan.json  very-large-complex-plan.json
tests/golden/: all-hierarchies-plan.txt  complex-plan--added.txt  complex-plan--changes-only.txt  complex-plan--filter-type-jobs.txt  complex-plan--modified.txt  complex-plan--removed.txt  complex-plan.md  complex-plan.txt  drift-plan.md  drift-plan.txt  initial-create-plan.txt  job-only-change-plan.txt  mixed-plan--added--removed.txt  mixed-plan--changes-only.md  mixed-plan--changes-only.txt  mixed-plan--filter-exact-etl.txt  mixed-plan--filter-fuzzy-pipeline.txt  mixed-plan--filter-status-added.txt  mixed-plan--filter-type-alerts.txt  mixed-plan--removed.txt  mixed-plan.md  mixed-plan.txt  no-changes-plan.md  no-changes-plan.txt  remove-one-perm-plan.txt  remove-perm-plan.txt  sample-plan.txt  smoke.sh  sub-only-change-plan.txt
tests/graph/: build-plan-graph.test.ts  build-resource-graph.test.ts  build-task-change-summary.test.ts  extract-tasks.test.ts  layout-graph.test.ts  resolve-task-diff-state.test.ts
tests/parser/: map-diff-state.test.ts  parse-plan.test.ts
tests/utils/: structural-diff.test.ts
(+231 files in other folders)
