[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "dagshund"
dynamic = ["version"]
description = "Diff visualizer for Databricks bundle plans — resources and job DAGs"
authors = [{ name = "Max Lautner" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Repository = "https://gitlab.com/chinchy/dagshund"
Issues = "https://gitlab.com/chinchy/dagshund/-/issues"

[project.scripts]
dagshund = "dagshund.cli:main"


[dependency-groups]
dev = [
    "prek==0.3.4",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "ty==0.0.19",
]

[tool.hatch.version]
path = "src/dagshund/__init__.py"

[tool.hatch.build]
artifacts = ["src/dagshund/_assets/template.html"]

[tool.hatch.build.targets.wheel]
packages = ["src/dagshund"]

[tool.ruff]
line-length = 120
cache-dir = "./.cache/ruff"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "I",   # isort
    "N",   # pep8 naming
    "RUF", # ruff specifics
    "PT",  # pytest
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # misuse of comprehensions
    "ICN", # import conventions
    "SIM", # simplifications
    "RET", # proper return statements
    "TCH", # type-checking imports
    "ANN", # type annotations
    "TC",  # type checking
]

[tool.coverage.run]
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
omit = [
    "src/dagshund/__init__.py",
    "src/dagshund/__main__.py",
]

[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
cache_dir = "./.cache/pytest"
pythonpath = ["src"]
testpaths = ["tests"]
